# genai_samples

./: .gitignore  pyproject.toml
react-app/: index.html  package.json  vite.config.js
react-app/src/: App.jsx
src/first_gen_ai/: agent.ipynb  coversational_rag.ipynb  example1-db  first.ipynb  first_rag.ipynb  first_rag_fixed.py  mariadb_api.py  myfirst_genai.py  myfirst_genai_openai.py
